--- a/src/Componentes/CardMapa/index.module.css
+++ b/src/Componentes/CardMapa/index.module.css
@@ -1,7 +1,14 @@
 .CardMapa {
     width: 100%;
     padding: 1.5rem;
-    margin: 2rem auto 0;
+    margin: 2rem 1rem 0;
     border-radius: 1rem;
     background-color: #FFF;
+    box-shadow: 2px 2px 6px rgba(44, 44, 44, 0.4);
+}
+
+@media (max-width: 560px) {
+    .CardMapa {
+        padding: 1rem;
+    }   
 }
