--- a/src/Componentes/CardMapa/index.module.css
+++ b/src/Componentes/CardMapa/index.module.css
@@ -5,7 +5,9 @@
     border-radius: 1rem;
     background-color: #FFF;
     box-shadow: 2px 2px 6px rgba(44, 44, 44, 0.4);
+    position: relative;
     transition: background-color 0.3s ease;
+    overflow: hidden;
 }
 
 .grama {
